  ClientUserMonitor, ClientMonitor, user and client type lists sorted
  ConnectionInfo and ClientUtil added
  ClientInfo is now an interface, implemented in ServerUtil.DefaultClientInfo
  RemoteServer.connect() now takes a ConnectionInfo as parameter
  Some refactoring due to the above
  Util.getVersionString() bug fixed, cut patch number from version
  EntityConnectionServer constructor error handling improved
  RemoteServer renamed to Server
  EntityTablePanel.initializeUI() bug fixed, NullPointerException when summary panel was not available
  EntityLookupField.SettingsPanel.initializeUI() bug fixed, CardLayout used
  EntityDataUtil moved to from tools to db
  EntityDataUtil renamed to EntityConnectionUtil
  EntityApplicationPanel.startApplications() bug fixed, did not handle exceptions originating from initializeConnectionProvider()
  FilteredTablePanel.selectTableColumns(), added select all/none buttons
  FilteredTablePanel, moved column resizing functionality from EntityTablePanel
  FilteredTablePanel, SHIFT-CTR-[left/right arrow] moves the column
  EntityEditModel.containsUnsavedData(), addConfirmEntitySetAllowedObserver() and removeConfirmEntitySetAllowedObserver()
  EntityEditPanel now warns if entity is about to be set when it contains unsaved data
  States.DefaultStateObserver, lazy initialization of Events
  States.DefaultAggregateState refactored to accommodate correct event firing, see StatesTest.aggregateStateEvents()
  Unit test usage of clumsy collection counting method replaced by using AtomicInteger instead
  JasperReports library updated to 6.0.0
  iText pdf library added to client runtime classpath for pdf export
  EntityImpl.KeyImpl renamed to DefaultKey for consistency
  EntityImpl renamed to DefaultEntity for consistency
  Property.setColumnName() added
  build.xml run_rmi_registry target removed
  EntityConnectionServerAdminImpl renamed to DefaultEntityConnectionServerAdmin for consistency
  build.xml updated according to the above